# GMU

./: .gitignore  Makefile  README.md
help/: multiouts~.maxhelp
source/: CMakeLists.txt
source/bargraf~/: bargraf~.c
source/bufGranul~/: CMakeLists.txt  bufGranul2~.c  bufGranul2~.h  bufGranul2~_DSP.c
source/common/: spat.c  spat.h
source/idleubutton/: idleubutton.c
source/liveGranul~/: LiveGranul~.c
source/mc.bufGranul~/: mc.bufGranul2~.c  mc.bufGranul2~.h  mc.bufGranul2~_DSP.c
source/mc.liveGranul~/: mc.LiveGranul~.c
source/mc.synGranul~/: mc.SynGranul~.c
source/multiouts2~/: multiouts2~.c
source/multiouts~/: multiouts~.c
source/rand_dist_list/: rand_dist_list.c
source/rand_dist_list~/: rand_dist_list~.c
source/synGranul~/: SynGranul~.c
